--- a/Advanced Data Analysis Techniques Lab/Advanced Data Analysis Techniques Lab.ipynb
+++ b/Advanced Data Analysis Techniques Lab/Advanced Data Analysis Techniques Lab.ipynb
@@ -93,6 +93,30 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "3cfe91c3-65d0-41be-a439-a2cca7bd91f4",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "-- EXERCISE\n",
+    "\n",
+    "-- JOIN the orders table on the lineitem table\n",
+    "-- Hint: use the columns orders.o_orderkey and lineitem.l_orderkey"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
@@ -293,6 +317,30 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "2223dae1-d351-4b9c-a7ba-da3eb608c288",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "-- EXERCISE\n",
+    "\n",
+    "-- Count the number of orders in the orders table\n",
+    "-- Count the number of unique customers in the orders table"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
@@ -372,6 +420,29 @@
     "    MAX(l_quantity) AS max_quantity\n",
     "FROM\n",
     "    samples.tpch.lineitem ;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "b67a8b68-0439-4435-95d9-8f625b69ac99",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "-- EXERCISE\n",
+    "\n",
+    "-- Find the earliest and latest order dates in the orders table"
    ]
   }
  ],
