--- a/Advanced SQL Lab/Advanced SQL Lab.ipynb
+++ b/Advanced SQL Lab/Advanced SQL Lab.ipynb
@@ -119,6 +119,30 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "a2e52ec3-52e8-4c76-bc46-ca6fa29f3a7d",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "-- EXERCISE\n",
+    "\n",
+    "-- Calculate the average trip distance by day of the week\n",
+    "-- Hint: use the `DAYOFWEEK` function"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
