--- a/Analytical Functions Lab/Analytical Functions Lab.ipynb
+++ b/Analytical Functions Lab/Analytical Functions Lab.ipynb
@@ -112,6 +112,30 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "76e92441-5b26-4dce-9a89-b171b407f336",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "-- EXERCISE\n",
+    "\n",
+    "-- Find the top 5 pickup locations by average longest ride time\n",
+    "-- Hint: first use a CTE to create a new column `ride_time` by using `tpep_pickup_datetime` and `tpep_dropoff_datetime`. Next, use a `GROUP BY` and `AVG` on the ride time"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
@@ -154,6 +178,30 @@
     "    trip_date\n",
     "HAVING\n",
     "    AVG(trip_distance) > 2;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "79d6a617-9c88-42ce-bdd2-5695a05b9ab1",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "-- EXERCISE\n",
+    "\n",
+    "-- Find the pickup locations where the average ride time is greater than 5 minutes\n",
+    "-- Hint: you can partly re-use the code from the previous exercise\n"
    ]
   },
   {
